Fix breadcrumbs unable to read on Windows high contrast mode

--- a/assets/stylesheets/module/_breadcrumbs.scss
+++ b/assets/stylesheets/module/_breadcrumbs.scss
@@ -28,5 +28,13 @@
     background: transparent;
     color: #333;
     font-weight: 700;
+
+    @media (-ms-high-contrast: active) {
+      -ms-high-contrast-adjust: none;
+      color: #fff;
+    }
+    @media (-ms-high-contrast: black-on-white) {
+      color: #000;
+    }
   }
 }
